--- a/lexiflux/templates/base.html
+++ b/lexiflux/templates/base.html
@@ -18,6 +18,8 @@
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Vue.Draggable/2.24.3/vuedraggable.umd.min.js"></script>
 
+        <script src="https://unpkg.com/htmx.org@1.9.12"></script>
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
@@ -151,8 +153,11 @@
     <body data-book-code="{{ book.code }}"
           data-book-page-number="{{ page.number }}"
           data-top-word="{{ top_word }}"
-          data-total-pages="{{ book.pages.count }}"  >
-
+          data-total-pages="{{ book.pages.count }}"
+          hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
+    >
+    <!-- Adding hx-headers replaces repeating everywhere
+        <input type="hidden" name="csrfmiddlewaretoken" value="{{ request.COOKIES.csrftoken }}"> -->
         {% block content %}{% endblock %}
 
     </body>
