--- a/lexiflux/templates/partials/import_modal.html
+++ b/lexiflux/templates/partials/import_modal.html
@@ -1,6 +1,11 @@
 {% load static %}
 
-<div id="importModal" class="modal fade" tabindex="-1" aria-labelledby="importModalLabel" aria-hidden="true">
+<div id="importModal"
+     class="modal fade"
+     tabindex="-1"
+     aria-labelledby="importModalLabel"
+     aria-hidden="true"
+     data-bs-show="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -9,31 +14,8 @@
       </div>
 
       <form hx-post="{% url 'import_book' %}"
-            hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
             hx-encoding="multipart/form-data"
-            hx-target="#modalContainer"
-            hx-swap="innerHTML"
-            hx-on::after-request="
-              if(event.detail.successful) {
-                // Clean up import modal first
-                const importModal = bootstrap.Modal.getInstance(document.getElementById('importModal'));
-                if(importModal) {
-                  importModal.hide();
-                }
-                document.querySelectorAll('.modal-backdrop').forEach(e => e.remove());
-                document.body.classList.remove('modal-open');
-                document.body.style.removeProperty('overflow');
-                document.body.style.removeProperty('padding-right');
-                document.getElementById('importModal').remove();
-
-                // Wait a bit for cleanup to complete then show edit modal
-                setTimeout(() => {
-                  const editModal = new bootstrap.Modal(document.getElementById('editBookModal'));
-                  editModal.show();
-                  htmx.trigger('#booksList', 'refresh');
-                }, 100);
-              }">
-        {% csrf_token %}
+            hx-target="#modalContainer">
         <div class="modal-body">
           {% if error_message %}
           <div class="alert alert-danger" role="alert">
