--- a/lexiflux/templates/partials/book_modal.html
+++ b/lexiflux/templates/partials/book_modal.html
@@ -48,7 +48,8 @@
                    hx-get="{% url 'search_authors' %}"
                    hx-trigger="keyup changed delay:300ms"
                    hx-target="#authorSuggestions"
-                   required>
+                   required
+            >
             <ul id="authorSuggestions" class="list-group mt-2">
               <!-- Author suggestions will be populated here -->
             </ul>
