--- a/lexiflux/templates/partials/book_modal.html
+++ b/lexiflux/templates/partials/book_modal.html
@@ -111,7 +111,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p>Are you sure you want to delete "{{ book.title }}"?</p>
+        <p>Are you sure you want to delete "{{ book.title }} ({{ book.code }})"?</p>
         <p class="text-muted small mb-0">This action cannot be undone.</p>
       </div>
       <div class="modal-footer">
