--- a/lexiflux/templates/partials/books_list.html
+++ b/lexiflux/templates/partials/books_list.html
@@ -39,10 +39,7 @@
                 <td>
                     <button class="btn btn-outline-secondary btn-sm"
                             hx-get="{% url 'edit_book_modal' book_id=book.id %}"
-                            hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
-                            hx-target="#modalContainer"
-                            hx-trigger="click"
-                            _="on htmx:afterSettle call new bootstrap.Modal('#editBookModal').show()">
+                            hx-target="#modalContainer">
                         Edit
                     </button>
                 </td>
