--- a/lexiflux/templates/base.html
+++ b/lexiflux/templates/base.html
@@ -24,6 +24,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
+        <meta name="htmx-config" content='{"globalViewTransitions": true}'>
+
         <style>
             .translation-span {
               vertical-align: baseline;
