remove old labrary views

--- a/lexiflux/templates/partials/books_list.html
+++ b/lexiflux/templates/partials/books_list.html
@@ -39,7 +39,8 @@
                 <td>
                     <button class="btn btn-outline-secondary btn-sm"
                             hx-get="{% url 'edit_book_modal' book_id=book.id %}"
-                            hx-target="#modalContainer">
+                            hx-target="#modalContainer"
+                    >
                         Edit
                     </button>
                 </td>
