--- a/lexiflux/templates/partials/error_modal.html
+++ b/lexiflux/templates/partials/error_modal.html
@@ -1,12 +1,12 @@
 <div id="errorModal" class="modal" tabindex="-1">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
+  <div class="modal-dialog  modal-dialog-centered">
+    <div class="modal-content" style="background-color: rgb(255, 190, 190)">
       <div class="modal-header">
         <h5 class="modal-title">Error</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <div class="alert alert-danger mb-0">
+        <div class="alert mb-0">
           <div class="error-message"></div>
         </div>
       </div>
