--- a/lexiflux/templates/partials/error_modal.html
+++ b/lexiflux/templates/partials/error_modal.html
@@ -1,7 +1,7 @@
 <div id="errorModal" class="modal" tabindex="-1">
   <div class="modal-dialog  modal-dialog-centered">
-    <div class="modal-content" style="background-color: rgb(255, 190, 190)">
-      <div class="modal-header">
+    <div class="modal-content" style="background-color: rgb(255, 100, 90)">
+      <div class="modal-header bg-danger">
         <h5 class="modal-title">Error</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
