--- a/lexiflux/templates/partials/error_modal.html
+++ b/lexiflux/templates/partials/error_modal.html
@@ -1,17 +1,19 @@
 <div id="errorModal" class="modal" tabindex="-1">
-  <div class="modal-dialog  modal-dialog-centered">
-    <div class="modal-content" style="background-color: rgb(255, 100, 90)">
-      <div class="modal-header bg-danger">
-        <h5 class="modal-title">Error</h5>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content" style="background-color: rgb(255, 235, 235)">
+      <div class="modal-header border-0 pb-0">
+        <h5 class="modal-title text-danger">
+          <i class="bi bi-exclamation-circle me-2"></i>Error
+        </h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
-        <div class="alert mb-0">
-          <div class="error-message"></div>
+      <div class="modal-body pt-2">
+        <div class="alert alert-danger bg-transparent border-0 mb-0 p-0">
+          <div class="error-message text-danger"></div>
         </div>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      <div class="modal-footer border-0">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
