--- a/lexiflux/templates/partials/error_modal.html
+++ b/lexiflux/templates/partials/error_modal.html
@@ -1,5 +1,5 @@
 <div id="errorModal" class="modal" tabindex="-1">
-  <div class="modal-dialog modal-dialog-centered">
+  <div class="modal-dialog modal-dialog-centered" style="max-width: 300px">
     <div class="modal-content" style="background-color: rgb(255, 235, 235)">
       <div class="modal-header border-0 pb-0">
         <h5 class="modal-title text-danger">
