https://github.com/andgineer/lexiflux/issues/63 fixed assorted htmx problems

--- a/lexiflux/templates/partials/book_modal.html
+++ b/lexiflux/templates/partials/book_modal.html
@@ -103,7 +103,7 @@
 </div>
 
 <!-- Delete Confirmation Modal -->
-<div class="modal fade" id="deleteConfirmModal" tabindex="-1" aria-hidden="true">
+<div class="modal fade" id="deleteConfirmModal" tabindex="-1" aria-hidden="true" data-bs-backdrop="false">
   <div class="modal-dialog modal-dialog-centered modal-sm" style="max-width: 300px">
     <div class="modal-content" style="background-color: rgb(255, 245, 235)">
       <div class="modal-header border-0 pb-0">
