--- a/lexiflux/templates/reader.html
+++ b/lexiflux/templates/reader.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_htmx.html" %}
 {% load static %}
 
 {% block head %}
@@ -10,6 +10,8 @@
 {% endblock %}
 
 {% block content %}
+    {{ block.super }}
+
     <div id="reader-settings-data"
          data-font-family="{% if settings.font_family is not None %}{{ settings.font_family }}{% endif %}"
          data-font-size="{% if settings.font_size is not None %}{{ settings.font_size }}{% endif %}"
@@ -48,15 +50,12 @@
                 </ul>
               </li>
               <li class="nav-item" x-data>
-                  <button class="btn btn-outline-secondary ms-2"
-                            @click="$dispatch('edit-book', {
-                                id: {{ book.id }},
-                                title: '{{ book.title|escapejs }}',
-                                author: '{{ book.author.name|escapejs }}',
-                                language: '{{ book.language.google_code }}',
-                                code: '{{ book.code|escapejs }}'
-                            })"
-                            title="Edit Book">
+                  <button
+                    class="btn btn-outline-secondary ms-2"
+                    hx-get="{% url 'edit_book_modal' book_id=book.id %}"
+                    hx-target="#modalContainer"
+                    title="Edit Book"
+                  >
                     <i class="bi bi-pencil"></i>
                   </button>
               </li>
