--- a/lexiflux/templates/partials/error_modal.html
+++ b/lexiflux/templates/partials/error_modal.html
@@ -1,4 +1,4 @@
-<div id="errorModal" class="modal" tabindex="-1">
+<div id="errorModal" class="modal" tabindex="-1" data-bs-backdrop="false">
   <div class="modal-dialog modal-dialog-centered" style="max-width: 300px">
     <div class="modal-content" style="background-color: rgb(255, 235, 235)">
       <div class="modal-header border-0 pb-0">
